# github-copilot-agent-app

./: README.md  azure.yaml
infra/: .terraform.lock.hcl  main.tf  output.tf  provider.conf.json  provider.tf
src/: Dockerfile  gunicorn.conf.py  pyproject.toml
src/api/: main.py  models.py  verify.py  verify_signature.py
src/tests/: sampleRequest.json
