[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Clemens Wältken <clemens.waltken@microsoft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.4"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
gunicorn = "^23.0.0"
openai = "^1.53.0"
requests = "^2.32.3"
ecdsa = "^0.19.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
fastapi = {extras = ["standard"], version = "^0.115.4"}
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
